[package]
name = "autoware_ndt_scan_matcher_rs"
version = "0.1.0"
edition = "2024"

[lib]
# staticlib: linked into the C++ ament library over FFI.
# rlib: keeps `cargo test` (and Rust-side consumers) working.
crate-type = ["staticlib", "rlib"]

[features]
# `std` is default-on so a plain `cargo build`/`test`/`clippy` has std (test harness + panic
# handler). The no_std / awkernel build opts out with `--no-default-features`.
default = ["std"]
std = []
# `ros`: build the ROS-message bindings (bindgen over the rosidl C headers) and the Pose-pointer
# FFI shims. Independent of `std` — the bindgen output is `use_core()` POD, so these work in no_std
# too. The ROS-node build enables it alongside the default `std`; awkernel could enable it in a
# no_std build (it would need the generated bindings vendored, since bindgen needs ROS headers).
ros = ["dep:bindgen"]

[dependencies]
# Pure-Rust libm: provides sqrt in no_std (and matches C++ std::sqrt — sqrt is IEEE
# correctly-rounded — so the differential oracle stays exact).
libm = "0.2"
# Linear algebra for the engine port. no_std + libm; fixed-size matrices need no alloc.
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }

[build-dependencies]
bindgen = { version = "0.69", optional = true }

# rust-hardening gates (see .claude/skills/rust-hardening).
[lints.rust]
warnings = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
string_slice = "deny"
unwrap_in_result = "deny"
arithmetic_side_effects = "deny"
let_underscore_must_use = "deny"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_lossless = "warn"
float_cmp = "deny"
lossy_float_literal = "deny"
# Suppression hygiene — prefer self-cleaning #[expect]; every allow/expect needs a reason.
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
pedantic = { level = "warn", priority = -1 }

[profile.release]
overflow-checks = true
