[package]
name = "autoware_ndt_scan_matcher_rs"
version = "0.1.0"
edition = "2024"

[lib]
# staticlib: linked into the C++ ament library over FFI.
# rlib: keeps `cargo test` (and Rust-side consumers) working.
crate-type = ["staticlib", "rlib"]

[features]
# The node crate is always std (it is the ROS-node C-ABI shell). The only build knob is `ros`:
# it turns on the rosidl bindgen bindings (`ros_msgs`) + the `Pose`-pointer FFI shims. Corrosion
# enables it (CMakeLists `FEATURES ros`); a plain `cargo build`/`clippy` leaves it off so no ROS
# headers are needed for local dev.
default = []
# `ros`: build the ROS-message bindings (bindgen over the rosidl C headers) and the Pose-pointer
# FFI shims. build.rs only does work under this feature.
ros = ["dep:bindgen"]
# `wcet-trace`: expose the engine crate's per-pass trace (C1 trace certificate) over the C ABI.
# Enabled only by the NDT_BUILD_TRACED analysis configure; never a shipping feature.
wcet-trace = ["realtime_ndt_scan_matcher/wcet-trace"]

[dependencies]
# The pure-Rust NDT engine (ROS-free, no_std-capable). Built with std + the rayon derivative
# reduction for the ROS node. The C ABI in this crate wraps this crate's public Rust API.
realtime_ndt_scan_matcher = { path = "realtime_ndt_scan_matcher", features = ["std", "parallel"] }
# Same nalgebra version/features as the engine crate, so `Matrix4<f32>`/`Matrix6<f64>` type
# identities unify to a single instance across the two crates (Cargo unifies identical deps).
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
# libm for the FFI-side math helpers that mirror the C++ pipeline.
libm = "0.2"

[build-dependencies]
bindgen = { version = "0.69", optional = true }

[workspace]
members = [".", "realtime_ndt_scan_matcher"]

# rust-hardening gates shared by both workspace members (see .claude/skills/rust-hardening).
[workspace.lints.rust]
warnings = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
string_slice = "deny"
unwrap_in_result = "deny"
arithmetic_side_effects = "deny"
let_underscore_must_use = "deny"
as_conversions = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_lossless = "warn"
float_cmp = "deny"
lossy_float_literal = "deny"
# Suppression hygiene — prefer self-cleaning #[expect]; every allow/expect needs a reason.
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
pedantic = { level = "warn", priority = -1 }

[lints]
workspace = true

[profile.release]
overflow-checks = true
