[package]
name = "realtime_ndt_scan_matcher"
version = "0.1.0"
edition = "2024"

[lib]
# Pure-Rust engine library: consumed by the ROS node crate (`autoware_ndt_scan_matcher_rs`) as a
# path dependency, and directly by Rust consumers (examples, tests, awkernel). No `staticlib` and
# no `extern "C"` — the C ABI lives entirely in the node crate.
crate-type = ["rlib"]

[features]
# `std` is default-on so a plain `cargo build`/`test`/`clippy` has std (test harness + panic
# handler). The no_std build opts out with `--no-default-features`.
#
# Engine interior-mutability matrix (see src/engine.rs):
#   std (default)          -> arc-swap cells + thread_local scratch (stateful align/result API)
#   no_std (no features)   -> RefCell cells + engine-owned scratch; single-core, engine is !Sync
#   no_std + `mt`          -> awkernel_sync mutex cells; scratch is caller-owned (`MatchScratch`),
#                             the stateful align/result API is compiled out; engine is Sync
default = ["std", "parallel"]
# `std` also pulls in `arc-swap` (the lock-free engine-state double-buffer). The no_std build
# (`--no-default-features`, single-threaded) uses a `RefCell` cell instead, so arc-swap stays off.
std = ["dep:arc-swap"]
# `mt`: multi-thread-safe no_std build (multi-core kernel). Replaces the single-core `RefCell`
# cells with `awkernel_sync` mutexes and removes the engine-owned align scratch (callers pass a
# `&mut MatchScratch`). Ignored when `std` is also on (std keeps arc-swap + thread_local). The
# FINAL binary must enable exactly one awkernel_sync backend feature (`x86`/`aarch64`/`rv64`/
# `rv32` on bare metal; `awkernel_sync/std` on host) — awkernel_sync does not compile without one.
mt = ["dep:awkernel_sync"]
# `parallel`: the rayon-backed `compute_derivatives` reduction. std-only (rayon needs std), so the
# no_std rlib (`--no-default-features`) excludes it and uses the serial backend. Bit-for-bit
# identical to serial (per-point-local contributions reduced in point-index order), so it is a pure
# performance option — the serial backend stays the predictable WCET baseline. Note `parallel`
# implies `std`, so `mt` + `parallel` resolves to the std backend (mt is ignored).
parallel = ["std", "dep:rayon", "dep:libc"]
# `wcet-count`: deterministic algorithmic-cost counters on the align path (iterations, neighbors,
# kd-tree nodes visited) — the worst-input search fitness of plan/ndt_wcet.md. Counters are valid
# for the SERIAL backend (the WCET baseline); compiled out entirely when the feature is off, so the
# shipping hot path is untouched. No extra dependencies.
wcet-count = []
# `wcet-trace`: per-pass trace records for the C1 cross-language trace certificate
# (plan/paper_fix2.md): per derivative pass, the point/neighbor counts, the neighbor-identity
# hash (FNV-1a over leaf-mean f64 bits in summation order), and the pass-final
# score/gradient/Hessian bits. Mirrored bit-for-bit by the C++ analysis build
# (bench/traced/include/ndt_trace.hpp). SERIAL backend only (the analysis configuration);
# the parallel backend poisons the trace. No extra dependencies.
wcet-trace = ["wcet-count"]

# The worst-input searches need the cost counters as their fitness; without the feature the
# examples have no meaningful fitness, so they are not built at all.
[[example]]
name = "wcet_search"
required-features = ["wcet-count"]

[[example]]
name = "wcet_search_legal"
required-features = ["wcet-count"]

[dependencies]
# Pure-Rust libm: provides sqrt in no_std (and matches C++ std::sqrt — sqrt is IEEE
# correctly-rounded — so the differential oracle stays exact).
libm = "0.2"
# Linear algebra for the engine port. no_std + libm; fixed-size matrices need no alloc.
nalgebra = { version = "0.33", default-features = false, features = ["libm"] }
# Data-parallel reduction backend (the `parallel` feature; std-only). Order-preserving
# `collect_into_vec` keeps the parallel reduce bit-identical to serial.
rayon = { version = "1", optional = true }
# Per-worker CPU pinning for the `parallel` pool (Linux `sched_setaffinity`), enabled at
# runtime by NDT_PIN_RAYON_WORKERS. Needed so an isolated-core deployment (isolcpus disables
# the scheduler's auto load-balancer) spreads rayon workers one-per-core, as OpenMP does with
# GOMP_CPU_AFFINITY. Pulled in only by the std-only `parallel` feature.
libc = { version = "0.2", optional = true }
# Lock-free engine-state double-buffer (the `std` feature). `load()` is lock-free — the read
# (align) path takes no lock; map-update publishes a fresh state with an atomic store.
arc-swap = { version = "1", optional = true }
# Kernel-grade locks for the `mt` (multi-core no_std) build. Unpublished on crates.io -> pinned git
# rev (recorded in Cargo.lock); default-features off so the backend choice stays with the final binary.
awkernel_sync = { git = "https://github.com/tier4/awkernel_sync.git", rev = "d9ea774eb55fc62a392981dd01945e92fec0f134", default-features = false, optional = true }

# Example-only (examples/tokio_ndt.rs): the async reference Host impl. std; not linked into the
# no_std rlib (dev-deps are excluded from --lib builds).
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# Property tests for the WCET analytic bound (tests/wcet_bounds.rs); dev-only.
proptest = "1"

[lints]
workspace = true

# NOTE (standalone consumers): this crate deliberately has no [profile] block — cargo reads
# profiles only from the workspace root being built. Inside this workspace (colcon/Corrosion, or
# `cargo build` from this directory) the root manifest's `[profile.release] overflow-checks = true`
# covers the engine. A consumer importing this crate from OUTSIDE the workspace (e.g. a no_std
# kernel repo, via a git/path dependency) gets its own profile instead: that final binary must set
# `overflow-checks = true` itself (and run the clippy gates in its CI) to keep the crate's
# no-silent-overflow guarantee. See doc/book/src/rt/panic-free.md.
